# playground-lsl

./: LICENSE  README.md  pyproject.toml  run-generate.sh  run-watch.sh
arduino/analogs_to_serial.ino/: analogs_to_serial.ino.ino
arduino/push_button.ino/: push_button.ino.ino
bash-tools/: kill-and-generate.sh  kill-and-launch.sh
src/generate/: generate_random_lsl_stream.py  generate_random_lsl_stream_events.py  midi_recorder_lsl_events.py  replay_hexoskin_to_lsl_stream.py  replay_hexoskin_to_lsl_stream_chunk.py  replay_nirs_to_lsl_stream.py  serial_listen_lsl_stream.py  serial_listen_lsl_stream_events.py  tcp_listen_lsl_stream_events.py
src/plsl/: __init__.py  generate_random_lsl_stream.py  generate_random_lsl_stream_events.py  gui.py
src/xdf/: read.py
